--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,18 @@
 {
-  "endOfLine": "lf",
-  "semi": false,
-  "singleQuote": false,
+  "printWidth": 100,
+  "trailingComma": "none",
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "arrowParens": "avoid",
+  "overrides": [
+    {
+      "files": [
+        "*.js",
+        "*.ts",
+        "*.tsx"
+      ],
+      "options": {
+        "tabWidth": 4
+      }
+    }
+  ]
 }
