--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-offline": "^3.0.27",
-    "gatsby-plugin-postcss": "^2.1.18",
+    "gatsby-plugin-postcss": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-source-filesystem": "^2.1.40",
@@ -21,8 +21,10 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.3.11",
     "prettier": "^1.19.1",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^2.2.19"
   },
   "keywords": [
     "gatsby"
